--- a/assets/styles/p2/ora-dream-hero.scss
+++ b/assets/styles/p2/ora-dream-hero.scss
@@ -9,6 +9,9 @@
   @media #{$xl-up} {
     padding-bottom: 100px;
   }
+  @media #{$phone-only} {
+    padding-bottom: 50px;
+  }
 
   .ora-btn-box {
     width: 48%;
@@ -35,6 +38,10 @@
       a.--dark {
         display: inline-block;
       }
+    }
+
+    @media #{$xl-up} {
+      width: 100%;
     }
   }
 }
@@ -71,13 +78,13 @@
     background-image: url('../images/p2/dreamhero/build-your.png');
 
     @media #{$phone-only} {
-      //height: 175px;
-      width: 84vw;
+      margin-top: 20px;
+      width: 100%;
     }
 
     @media #{$tablet-only} {
-      //height: 250px;
-      width: 68%;
+      width: 90%;
+      margin-top: 20px;
     }
 
     @media #{$laptop-only} {
@@ -159,6 +166,10 @@
       order: 2;
     }
 
+    @media #{$laptop-only} {
+      padding-top: 50px;
+    }
+
     h3 {
       text-shadow: 0 0 47.5px #000000;
       text-transform: uppercase;
@@ -192,6 +203,10 @@
   background-color: #202020;
   background-size: cover;
   background-repeat: no-repeat;
+
+  @media #{$phone-only} {
+    height: 200px;
+  }
 
   @media #{$tablet-only} {
     height: 350px;
