--- a/assets/styles/p2/ora-header.scss
+++ b/assets/styles/p2/ora-header.scss
@@ -22,7 +22,7 @@
 
   @media #{$phone-only} {
     flex-direction: column;
-    padding: 25px 5% 0;
+    padding: 10px 5% 25px 5%;
   }
 }
 
@@ -36,7 +36,7 @@
   background-position: center;
 
   @media #{$phone-only} {
-    width: 125px;
+    width: 175px;
   }
 }
 
@@ -56,6 +56,8 @@
 
   @media #{$phone-only} {
     align-items: center;
+    margin-bottom: 10px;
+    margin-top: 5px;
   }
 
   @media #{$tablet-only} {
