--- a/assets/styles/p2/p2-builds.scss
+++ b/assets/styles/p2/p2-builds.scss
@@ -12,7 +12,7 @@
   text-align: center;
 
   @media #{$tablet-up} {
-    padding: 75px 1px;
+    padding: 70px 1px 30px;
   }
 }
 
@@ -23,7 +23,7 @@
   background-size: cover;
   background-position: center;
   height: 215px;
-  
+
   @media #{$tablet-only} {
     height: 500px;
   }
@@ -76,6 +76,7 @@
   display: flex;
   flex-direction: column;
   padding: 25px 5vw;
+  line-height: 1.2;
 
   @media #{$tablet-only} {
     padding: 35px 20px 50px 50px;
@@ -93,7 +94,7 @@
     @media #{$laptop-only} {
       padding: 35px 20px 0 16vw;
     }
-  
+
     @media #{$desktop-up} {
       padding: 50px 25px 0 20vw;
     }
