--- a/assets/styles/p2/sticky-bar.scss
+++ b/assets/styles/p2/sticky-bar.scss
@@ -26,7 +26,7 @@
   padding: 10px;
   transition: all .4s;
   line-height: 1.1;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 
   @media #{$phone-only} {
     width: 33.3%;
