changed the sizing and spacing on the ask now button so we can place the facebook chat module icon onto it

--- a/assets/styles/p2/sticky-bar.scss
+++ b/assets/styles/p2/sticky-bar.scss
@@ -59,6 +59,10 @@
   &.--chat {
     background-color: $white;
 
+    @media #{$tablet-up} {
+      padding-left: 56px;
+    }
+
     .ora-sticky-button-icon {
       color: $ora-green;
     }
@@ -67,12 +71,9 @@
       color: $ora-darkgrey;
     }
 
-    &:hover {
-      background-color: darken($white, 10%);
-    }
-
     .ora-sticky-button-hidden {
       color: $ora-darkgrey;
+      padding-top: 22px;
     }
   }
 }
