--- a/src/shared/meta-head.pug
+++ b/src/shared/meta-head.pug
@@ -1,8 +1,8 @@
 head
   meta( charset='utf-8')
-  title Off Road Addiction | 4x4 parts, upgrade fenders and flares, 4wd armor, Jeep body lift kits, offroad store
+  title Build Your Dream Jeep | Off Road Addiction
   meta( name='keywords' 							content='4x4 parts, upgrade fenders and flares, 4wd armor, Jeep body lift kits, offroad store')
-  meta( name='description' 						content='Top brand 4x4, 4wd and truck offroading parts, accessories and upgrades from Off Road Addiction. Fast delivery in Canada, no border or duty fees.')
+  meta( name='description' 						content='Off Road Addiction has a huge selection of aftermarket parts and accessories for Jeep and off road enthusiasts. Lift Kits, Wheels, Tires, Winches, Fenders, Bumpers, Lights & more! We install everything we sell. Get a Free Quote to start planning your custom build today.')
 
   meta( property='og:type' content='website')
   meta( property='og:url'  content='https://offroad-addiction.com/')
