Content changes as per client

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -80,9 +80,10 @@ html
       .ora-split
         .ora-split-left
           p
-            |Looking for a performance or style upgrade? Always wanted to take your Jeep off road but not sure where to start? Let us take care of all your off roading and customization needs. Go whereever the road takes you and turn heads on the way in a custom 4x4 vehicle from Off Road Addiction.
+            |Looking for a performance or style upgrade? Always wanted to take your Jeep off road but not sure where to start? Let us take care of all your off roading and customization needs. Go wherever the road takes you, and turn heads on the way in a custom 4x4 vehicle from Off Road Addiction.
           p
-            |We have a huge selection of aftermarket parts and Jeep accessories for off road enthusiasts at our superstore location in St. Thomas, ON. Not sure what you need? Our experts are always here to help! We also install everything we sell - our certified technicians can make your dream Jeep a reality.
+            |We have a huge selection of aftermarket parts, and Jeep accessories for off road enthusiasts at our superstore location in St. Thomas, ON. Not sure what you need? Our experts are always here to help! We also install everything we sell - our ministry licensed technicians can make your dream Jeep a reality.
+
           span.--bigtext
             |Get in touch today so we can start planning your build!
         .ora-split-right
@@ -101,7 +102,7 @@ html
             li.u-uppercase.u-bold
               .ora-checkbox
               span
-                |in-house certified technicians
+              |in-house ministry licensed technicians
             li.u-uppercase.u-bold
               .ora-checkbox
               span
@@ -117,16 +118,16 @@ html
           .ora-builds-tier-right
             .ora-builds-tier-info
               span.ora-tier-subtitle.u-uppercase.u-phone-bottom-padding
-                |stage 1 build
+                |JEEP 101
               span.ora-tier-title
-                |START WITH THE BASICS
+                |JUST A TASTE
               span.--bigtext.u-seventy
-                |Add a small lift and bigger tires to start feeding your addiction.
+                |Add a small lift, and bigger tires to start feeding your addiction.
               ul.--void
                 li
                   .ora-checkbox
                   span
-                    |Leveling Kit
+                    |1.75” - 2.5” Lift Kit
                 li
                   .ora-checkbox
                   span
@@ -139,11 +140,11 @@ html
           .ora-builds-tier-left
             .ora-builds-tier-info.--left
               span.ora-tier-subtitle.u-uppercase.u-phone-bottom-padding
-                |stage 2 build
+                |JEEP 201
               span.ora-tier-title
-                |LIFT IT HIGHER
+                |NO TURNING BACK
               span.--bigtext.u-seventy
-                |Take it to the next level with a bigger lift, wider tire stance and accessories that suit your style.
+                |Take it to the next level with a bigger lift, wider tire stance, and accessories that suit your style.
               ul.--void
                 li
                   .ora-checkbox
@@ -173,11 +174,11 @@ html
           .ora-builds-tier-right
             .ora-builds-tier-info
               span.ora-tier-subtitle.u-uppercase.u-phone-bottom-padding
-                |stage 3 build
+                |JEEP 301
               span.ora-tier-title
-                |NO LIMITS
+                |FULLY ADDICTED
               span.--bigtext
-                |Ready to challenge bigger &amp; badder obstacles than ever before?
+                |Ready to challenge bigger &amp; badder obstacles  than ever before?
               ul.--void
                 li
                   .ora-checkbox
