commiting to merge in master.

--- a/assets/styles/p2/sticky-bar.scss
+++ b/assets/styles/p2/sticky-bar.scss
@@ -110,8 +110,8 @@
 
 /*stylelint-disable*/
 .fb_customer_chat_bubble_pop_in { 
-  bottom: 1.8% !important; 
-  right: 8.8 !important;
+  bottom: 2.1% !important; 
+  right: 8.8% !important;
   transform: scale(.7, .7);
   z-index: 1 !important; 
    
