--- a/src/templates/ford.pug
+++ b/src/templates/ford.pug
@@ -54,9 +54,9 @@ html
       // Hero Section ----------------------------------------:
       .ora-dream-hero
         .ora-dream-hero-content
-          .ora-dream-hero-bigtext
+          .ora-dream-hero-bigtext.--ford
           .ora-dream-hero-content-sub
-            .ora-dream-hero-image
+            .ora-dream-hero-image.--ford
             .ora-dream-hero-textbox
               h3
                 |get started with <br class="ora-br-laptop">a <em>free quote</em> on parts, accessories or custom builds
@@ -80,10 +80,9 @@ html
       .ora-split
         .ora-split-left
           p
-            |Looking for a performance or style upgrade? Always wanted to take your Jeep off road but not sure where to start? Let us take care of all your off roading and customization needs. Go wherever the road takes you, and turn heads on the way in a custom 4x4 vehicle from Off Road Addiction.
+            |Looking for a performance or style upgrade? Always wanted to take your truck off road but not sure where to start? Let us take care of all your  customization needs. Go wherever the road takes you, and turn heads on the way in a custom 4x4 vehicle from Off Road Addiction.
           p
-            |We have a huge selection of aftermarket parts, and Jeep accessories for off road enthusiasts at our superstore location in St. Thomas, ON. Not sure what you need? Our experts are always here to help! We also install everything we sell - our ministry licensed technicians can make your dream Jeep a reality.
-
+            |We have a huge selection of aftermarket parts, and accessories for truck enthusiasts at our superstore location in St. Thomas, ON. Not sure what you need? Our experts are always here to help! We also install everything we sell - our ministry licensed technicians can make your dream Ford a reality.
           span.--bigtext
             |Get in touch today so we can start planning your build!
         .ora-split-right
@@ -114,11 +113,11 @@ html
             |Start planning your <br class="ora-br-phone"><b>CUSTOM BUILD</b>
         .ora-builds-tier
           .ora-builds-tier-left
-            .ora-builds-image.--one
+            .ora-builds-image.--one.--ford
           .ora-builds-tier-right
             .ora-builds-tier-info
               span.ora-tier-subtitle.u-uppercase.u-phone-bottom-padding
-                |JEEP 101
+                |FORD 101
               span.ora-tier-title
                 |JUST A TASTE
               span.--bigtext.u-seventy
@@ -140,7 +139,7 @@ html
           .ora-builds-tier-left
             .ora-builds-tier-info.--left
               span.ora-tier-subtitle.u-uppercase.u-phone-bottom-padding
-                |JEEP 201
+                |FORD 201
               span.ora-tier-title
                 |NO TURNING BACK
               span.--bigtext.u-seventy
@@ -167,14 +166,14 @@ html
                   span
                     |Rock Sliders
           .ora-builds-tier-right
-            .ora-builds-image.--two
+            .ora-builds-image.--two.--ford
         .ora-builds-tier
           .ora-builds-tier-left
-            .ora-builds-image.--three
+            .ora-builds-image.--three.--ford
           .ora-builds-tier-right
             .ora-builds-tier-info
               span.ora-tier-subtitle.u-uppercase.u-phone-bottom-padding
-                |JEEP 301
+                |FORD 301
               span.ora-tier-title
                 |FULLY ADDICTED
               span.--bigtext
@@ -231,12 +230,12 @@ html
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
 
             .ora-review-box
-              h4.u-main-font.u-bold
-                |JK LIFT KIT &amp; SHOCKS
+              h4.u-main-font.u-bold.u-uppercase
+                |f150 compliments
               p
-                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
+                |My F150 and I always get compliments wherever we go. Tire, rims, lights, railings, covers you name it, they do it.
               span.ora-review-box-author
-                |Jeff H.
+                |Joel R.
               .ora-review-stars
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
@@ -259,7 +258,7 @@ html
       // Quote Section ----------------------------------------:
       .ora-quote(id="ora-request-form")
         .ora-quote-content
-          .ora-quote-content-left
+          .ora-quote-content-left.--ford
           .ora-quote-content-right
             span.ora-quote-pretitle.u-darkgrey
               |GET YOUR
@@ -279,7 +278,7 @@ html
       // Quote Blurb Section ----------------------------------------:
       .ora-quote-blurb
         .ora-quote-blurb-content
-          .ora-quote-blurb-left
+          .ora-quote-blurb-left.--ford
           .ora-quote-blurb-right
             p
               |We only choose products that are tough enough to use on our own Jeeps - all backed by our quality in-house installations and service guarantee.
@@ -288,11 +287,11 @@ html
       // Banner Section ----------------------------------------:
       .ora-banner
         .ora-banner-bg-strip
-          .ora-banner-bg-strip-item.--liftkits
-          .ora-banner-bg-strip-item.--flare
-          .ora-banner-bg-strip-item.--recovery
-          .ora-banner-bg-strip-item.--tire
-          .ora-banner-bg-strip-item.--tires
+          .ora-banner-bg-strip-item.--liftkits.--ford
+          .ora-banner-bg-strip-item.--flare.--ford
+          .ora-banner-bg-strip-item.--recovery.--ford
+          .ora-banner-bg-strip-item.--tire.--ford
+          .ora-banner-bg-strip-item.--tires.--ford
         .ora-banner-fg-strip
           .ora-banner-fg-green
           .ora-banner-fg-words
